<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ikki.dicodingevent.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_upcoming"
        android:name="com.ikki.dicodingevent.ui.dashboard.DashboardFragment"
        android:label="@string/title_upcoming"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_finished"
        android:name="com.ikki.dicodingevent.ui.notifications.NotificationsFragment"
        android:label="@string/title_finished"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_favourite"
        android:name="com.ikki.dicodingevent.ui.favourite.FavouriteFragment"
        android:label="@string/title_favourite"
        tools:layout="@layout/fragment_favourite" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.ikki.dicodingevent.ui.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>